backend/kubernetes/k8s-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: default
  labels:
    app: backend
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - name: api
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        imagePullPolicy: Always
        image: nathapaulino/backend-chatapp:latest
        ports:
        - containerPort: 8080
