backend/kubernetes/k8s-backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: backend.cluster
      http:
        paths:
          - path: /message
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
